--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *~
 *.ignore
+assets/
+_layouts/
+_sass/
+script/
+.sass-cache/
+_config.yml
+CONTRIBUTING.md
+Gemfile
+*.lock
+*.gemspec
+index.md
+.travis.yml
+math1mp/script
+math1mp/Gemfile*
+math1mp/*.md
+math1mp/*.gemspec
